# video-to-gif

./: .gitignore  Cargo.toml  LICENSE  README.MD  TODO.md  build-and-release.bat  build.bat  demo.bat  post-build.bat  update-release.bat  video-gif.bat
.github/workflows/: ci.yml  release.yml
docs/: release-guide.md
scripts/: release.ps1  release.sh
src/: converter.rs  main.rs  utils.rs
