[package]
name = "video-gif"
version = "1.2.4"
edition = "2021"
authors = ["liuhuapiaoyuan <g278780765@gmail.com>"]
description = "一个简单易用的命令行工具，用于将文件夹中的所有MP4视频文件转换为GIF动图。内置FFmpeg，无需单独安装。"
repository = "https://github.com/your-username/video-gif"
license = "MIT"
keywords = ["video", "gif", "converter", "mp4", "ffmpeg"]
categories = ["command-line-utilities", "multimedia"]

[[bin]]
name = "video-gif"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
indicatif = "0.17"
walkdir = "2.4"
tokio = { version = "1.0", features = ["full"], optional = true }

[features]
default = []
async = ["tokio"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true 